# docker

./: README.md  build.ps1  ml-process.yml  ml-train.yml
ml-app/: Dockerfile  package-lock.json  package.json
ml-app/models/: model.p
ml-app/src/: app.controller.spec.ts  app.controller.ts  app.service.ts  main.ts
ml-app/src/interfaces/: IScore.ts
ml-processing/: Dockerfile  process.py  pyproject.toml  test.py
ml-processing/ml-models/: model_1694454520.7543507.p  model_1694578229.9542766.p  model_1694698532.0506501.p  model_1695108923.3394296.p
ml-training/: Dockerfile  pyproject.toml  train.py
