[tool.poetry]
name = "ml-training"
version = "0.1.0"
description = ""
authors = ["TT <tarikub@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.0"
nltk = "^3.8.1"
joblib = "^1.3.2"
scikit-learn = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
